crates/jp_config/src/snapshots/jp_config__tests__app_config_fields.snap
---
source: crates/jp_config/src/lib_tests.rs
expression: "AppConfig::fields()"
---
[
    "config_load_paths",
    "extends",
    "inherit",
    "user.name",
    "template.values",
    "style.sanitize",
    "style.typewriter.code_delay",
    "style.typewriter.max_latency",
    "style.typewriter.text_delay",
    "style.tool_call.show",
    "style.tool_call.progress.delay_secs",
    "style.tool_call.progress.interval_ms",
    "style.tool_call.progress.show",
    "style.tool_call.progress.stderr_rows",
    "style.tool_call.preparing.delay_secs",
    "style.tool_call.preparing.interval_ms",
    "style.tool_call.preparing.show",
    "style.streaming.progress.delay_secs",
    "style.streaming.progress.interval_ms",
    "style.streaming.progress.show",
    "style.reasoning.background",
    "style.reasoning.display",
    "style.reasoning.extend_across_tool_calls",
    "style.reasoning.summary_model.id",
    "style.reasoning.summary_model.parameters.max_tokens",
    "style.reasoning.summary_model.parameters",
    "style.reasoning.summary_model.parameters.reasoning",
    "style.reasoning.summary_model.parameters.service_tier",
    "style.reasoning.summary_model.parameters.stop_words",
    "style.reasoning.summary_model.parameters.temperature",
    "style.reasoning.summary_model.parameters.top_k",
    "style.reasoning.summary_model.parameters.top_p",
    "style.mcp_startup.delay_secs",
    "style.mcp_startup.interval_ms",
    "style.mcp_startup.show",
    "style.mcp_startup.stderr_rows",
    "style.markdown.hr_style",
    "style.markdown.table_continuation_edge",
    "style.markdown.table_max_column_width",
    "style.markdown.theme",
    "style.markdown.wrap_width",
    "style.lock_wait.delay_secs",
    "style.lock_wait.interval_ms",
    "style.lock_wait.show",
    "style.lock_wait.timeout_secs",
    "style.inline_code.background",
    "style.code.color",
    "style.code.copy_link",
    "style.code.file_link",
    "style.code.line_numbers",
    "providers.mcp",
    "providers.llm.aliases",
    "providers.llm.vllm.api_key_env",
    "providers.llm.vllm.auth",
    "providers.llm.vllm.base_url",
    "providers.llm.openrouter.api_key_env",
    "providers.llm.openrouter.app_name",
    "providers.llm.openrouter.app_referrer",
    "providers.llm.openrouter.auth",
    "providers.llm.openrouter.base_url",
    "providers.llm.openai.api_key_env",
    "providers.llm.openai.auth",
    "providers.llm.openai.base_url",
    "providers.llm.openai.base_url_env",
    "providers.llm.openai.codex_base_url",
    "providers.llm.openai.codex_base_url_env",
    "providers.llm.ollama.base_url",
    "providers.llm.llamacpp.base_url",
    "providers.llm.google.api_key_env",
    "providers.llm.google.auth",
    "providers.llm.google.base_url",
    "providers.llm.deepseek.api_key_env",
    "providers.llm.deepseek.auth",
    "providers.llm.deepseek.base_url",
    "providers.llm.cerebras.api_key_env",
    "providers.llm.cerebras.auth",
    "providers.llm.cerebras.base_url",
    "providers.llm.anthropic.acp_config_dirs",
    "providers.llm.anthropic.api_key_env",
    "providers.llm.anthropic.auth",
    "providers.llm.anthropic.base_url",
    "providers.llm.anthropic.beta_headers",
    "providers.llm.anthropic.chain_on_max_tokens",
    "providers.llm.anthropic.subscription_flow",
    "plugins.command",
    "plugins.shutdown_timeout_secs",
    "loader.reset",
    "interrupt.escalation_cooldown_secs",
    "interrupt.tool_call.action",
    "interrupt.tool_call.compose_in_editor",
    "interrupt.streaming.action",
    "interrupt.streaming.compose_in_editor",
    "editor.cmd",
    "editor.envs",
    "editor.inline.edit_mode",
    "editor.cmd.args",
    "editor.cmd.program",
    "editor.cmd.shell",
    "conversation.attachments",
    "conversation.default_id",
    "conversation.labels",
    "conversation.start_local",
    "conversation.tools",
    "conversation.tools.*.cancellation_response",
    "conversation.tools.*.enable",
    "conversation.tools.*.format",
    "conversation.tools.*.result",
    "conversation.tools.*.run",
    "conversation.tools.*.style.hidden",
    "conversation.tools.*.style.inline_results",
    "conversation.tools.*.style.joins_reasoning",
    "conversation.tools.*.style.parameters",
    "conversation.tools.*.style.print_stderr",
    "conversation.tools.*.style.results_file_link",
    "conversation.tools.*.style.error.inline_results",
    "conversation.tools.*.style.error.results_file_link",
    "conversation.tools.*.enable.allow_toggle",
    "conversation.tools.*.enable.state",
    "conversation.tools.*.access.env",
    "conversation.tools.*.access.fs",
    "conversation.title.from_heading",
    "conversation.title.generate.auto",
    "conversation.title.generate.model.id",
    "conversation.title.generate.model.parameters.max_tokens",
    "conversation.title.generate.model.parameters",
    "conversation.title.generate.model.parameters.reasoning",
    "conversation.title.generate.model.parameters.service_tier",
    "conversation.title.generate.model.parameters.stop_words",
    "conversation.title.generate.model.parameters.temperature",
    "conversation.title.generate.model.parameters.top_k",
    "conversation.title.generate.model.parameters.top_p",
    "conversation.inquiry.assistant.instructions",
    "conversation.inquiry.assistant.name",
    "conversation.inquiry.assistant.system_prompt",
    "conversation.inquiry.assistant.system_prompt_sections",
    "conversation.inquiry.assistant.tool_choice",
    "conversation.inquiry.assistant.request.base_backoff_ms",
    "conversation.inquiry.assistant.request.cache",
    "conversation.inquiry.assistant.request.max_backoff_secs",
    "conversation.inquiry.assistant.request.max_response_bytes",
    "conversation.inquiry.assistant.request.max_retries",
    "conversation.inquiry.assistant.request.stream_idle_timeout_secs",
    "conversation.inquiry.assistant.model.id",
    "conversation.inquiry.assistant.model.parameters.max_tokens",
    "conversation.inquiry.assistant.model.parameters",
    "conversation.inquiry.assistant.model.parameters.reasoning",
    "conversation.inquiry.assistant.model.parameters.service_tier",
    "conversation.inquiry.assistant.model.parameters.stop_words",
    "conversation.inquiry.assistant.model.parameters.temperature",
    "conversation.inquiry.assistant.model.parameters.top_k",
    "conversation.inquiry.assistant.model.parameters.top_p",
    "conversation.compaction.rules",
    "assistant.instructions",
    "assistant.name",
    "assistant.system_prompt",
    "assistant.system_prompt_sections",
    "assistant.tool_choice",
    "assistant.request.base_backoff_ms",
    "assistant.request.cache",
    "assistant.request.max_backoff_secs",
    "assistant.request.max_response_bytes",
    "assistant.request.max_retries",
    "assistant.request.stream_idle_timeout_secs",
    "assistant.model.id",
    "assistant.model.parameters.max_tokens",
    "assistant.model.parameters",
    "assistant.model.parameters.reasoning",
    "assistant.model.parameters.service_tier",
    "assistant.model.parameters.stop_words",
    "assistant.model.parameters.temperature",
    "assistant.model.parameters.top_k",
    "assistant.model.parameters.top_p",
]
