crates/jp_config/src/snapshots/jp_config__tests__partial_app_config_default.snap
---
source: crates/jp_config/src/lib_tests.rs
expression: "PartialAppConfig::default()"
---
PartialAppConfig {
    inherit: None,
    config_load_paths: None,
    extends: None,
    loader: PartialLoaderConfig {
        reset: None,
    },
    assistant: PartialAssistantConfig {
        name: None,
        system_prompt: None,
        system_prompt_sections: Vec(
            [],
        ),
        instructions: Vec(
            [],
        ),
        tool_choice: None,
        model: PartialModelConfig {
            id: Id(
                PartialModelIdConfig {
                    provider: None,
                    name: None,
                },
            ),
            parameters: PartialParametersConfig {
                max_tokens: None,
                reasoning: None,
                service_tier: None,
                temperature: None,
                top_p: None,
                top_k: None,
                stop_words: None,
                other: None,
            },
        },
        request: PartialRequestConfig {
            max_retries: None,
            base_backoff_ms: None,
            max_backoff_secs: None,
            stream_idle_timeout_secs: None,
            max_response_bytes: None,
            cache: None,
        },
    },
    conversation: PartialConversationConfig {
        title: PartialTitleConfig {
            generate: PartialGenerateConfig {
                auto: None,
                model: None,
            },
            from_heading: None,
        },
        tools: PartialToolsConfig {
            defaults: PartialToolsDefaultsConfig {
                enable: None,
                run: None,
                format: None,
                result: None,
                cancellation_response: None,
                style: PartialDisplayStyleConfig {
                    hidden: None,
                    joins_reasoning: None,
                    inline_results: None,
                    results_file_link: None,
                    parameters: None,
                    print_stderr: None,
                    error: PartialErrorStyleConfig {
                        inline_results: None,
                        results_file_link: None,
                    },
                },
                access: None,
            },
            tools: Map(
                {},
            ),
        },
        compaction: PartialCompactionConfig {
            rules: Vec(
                [],
            ),
        },
        attachments: Vec(
            [],
        ),
        labels: Map(
            {},
        ),
        inquiry: PartialInquiryConfig {
            assistant: PartialAssistantConfig {
                name: None,
                system_prompt: None,
                system_prompt_sections: Vec(
                    [],
                ),
                instructions: Vec(
                    [],
                ),
                tool_choice: None,
                model: PartialModelConfig {
                    id: Id(
                        PartialModelIdConfig {
                            provider: None,
                            name: None,
                        },
                    ),
                    parameters: PartialParametersConfig {
                        max_tokens: None,
                        reasoning: None,
                        service_tier: None,
                        temperature: None,
                        top_p: None,
                        top_k: None,
                        stop_words: None,
                        other: None,
                    },
                },
                request: PartialRequestConfig {
                    max_retries: None,
                    base_backoff_ms: None,
                    max_backoff_secs: None,
                    stream_idle_timeout_secs: None,
                    max_response_bytes: None,
                    cache: None,
                },
            },
        },
        start_local: None,
        default_id: None,
    },
    style: PartialStyleConfig {
        sanitize: None,
        code: PartialCodeConfig {
            color: None,
            line_numbers: None,
            file_link: None,
            copy_link: None,
        },
        inline_code: PartialInlineCodeConfig {
            background: None,
        },
        markdown: PartialMarkdownConfig {
            wrap_width: None,
            table_max_column_width: None,
            table_continuation_edge: None,
            theme: None,
            hr_style: None,
        },
        mcp_startup: PartialMcpStartupConfig {
            show: None,
            delay_secs: None,
            interval_ms: None,
            stderr_rows: None,
        },
        reasoning: PartialReasoningConfig {
            display: None,
            summary_model: None,
            background: None,
            extend_across_tool_calls: None,
        },
        streaming: PartialStreamingConfig {
            progress: PartialProgressConfig {
                show: None,
                delay_secs: None,
                interval_ms: None,
            },
        },
        lock_wait: PartialLockWaitConfig {
            show: None,
            delay_secs: None,
            interval_ms: None,
            timeout_secs: None,
        },
        tool_call: PartialToolCallConfig {
            show: None,
            progress: PartialToolProgressConfig {
                show: None,
                delay_secs: None,
                interval_ms: None,
                stderr_rows: None,
            },
            preparing: PartialPreparingConfig {
                show: None,
                delay_secs: None,
                interval_ms: None,
            },
        },
        typewriter: PartialTypewriterConfig {
            text_delay: None,
            code_delay: None,
            max_latency: None,
        },
    },
    interrupt: PartialInterruptConfig {
        escalation_cooldown_secs: None,
        streaming: PartialStreamingInterruptConfig {
            action: None,
            compose_in_editor: None,
        },
        tool_call: PartialToolInterruptConfig {
            action: None,
            compose_in_editor: None,
        },
    },
    editor: PartialEditorConfig {
        cmd: None,
        envs: None,
        inline: PartialInlineEditorConfig {
            edit_mode: None,
        },
    },
    template: PartialTemplateConfig {
        values: Map(
            {},
        ),
    },
    providers: PartialProviderConfig {
        llm: PartialLlmProviderConfig {
            aliases: Map(
                {},
            ),
            anthropic: PartialAnthropicConfig {
                auth: None,
                subscription_flow: None,
                acp_config_dirs: None,
                api_key_env: None,
                base_url: None,
                chain_on_max_tokens: None,
                beta_headers: None,
            },
            cerebras: PartialCerebrasConfig {
                auth: None,
                api_key_env: None,
                base_url: None,
            },
            deepseek: PartialDeepseekConfig {
                auth: None,
                api_key_env: None,
                base_url: None,
            },
            google: PartialGoogleConfig {
                auth: None,
                api_key_env: None,
                base_url: None,
            },
            llamacpp: PartialLlamacppConfig {
                base_url: None,
            },
            ollama: PartialOllamaConfig {
                base_url: None,
            },
            openai: PartialOpenaiConfig {
                auth: None,
                api_key_env: None,
                base_url: None,
                base_url_env: None,
                codex_base_url: None,
                codex_base_url_env: None,
            },
            openrouter: PartialOpenrouterConfig {
                auth: None,
                api_key_env: None,
                app_name: None,
                app_referrer: None,
                base_url: None,
            },
            vllm: PartialVllmConfig {
                auth: None,
                api_key_env: None,
                base_url: None,
            },
        },
        mcp: Map(
            {},
        ),
    },
    plugins: PartialPluginsConfig {
        shutdown_timeout_secs: None,
        command: Map(
            {},
        ),
    },
    user: PartialUserConfig {
        name: None,
    },
}
