crates/jp_config/src/snapshots/jp_config__tests__partial_app_config_default_values.snap
---
source: crates/jp_config/src/lib_tests.rs
expression: "PartialAppConfig::default_values(&())"
---
Ok(
    Some(
        PartialAppConfig {
            inherit: None,
            config_load_paths: None,
            extends: Some(
                [
                    Path(
                        "config.d/**/*",
                    ),
                ],
            ),
            loader: PartialLoaderConfig {
                reset: None,
            },
            assistant: PartialAssistantConfig {
                name: None,
                system_prompt: Some(
                    Merged(
                        PartialMergedString {
                            value: Some(
                                "You are a helpful assistant.",
                            ),
                            strategy: None,
                            separator: None,
                            discard_when_merged: Some(
                                true,
                            ),
                            dedup: None,
                        },
                    ),
                ),
                system_prompt_sections: Vec(
                    [],
                ),
                instructions: Merged(
                    MergedVec {
                        value: [
                            PartialInstructionsConfig {
                                title: Some(
                                    "How to respond to the user",
                                ),
                                description: None,
                                position: None,
                                items: Some(
                                    [
                                        "Be concise",
                                        "Use simple sentences. But feel free to use technical jargon.",
                                        "Do NOT overexplain basic concepts. Assume the user is technically proficient.",
                                        "AVOID flattering, corporate-ish or marketing language. Maintain a neutral viewpoint.",
                                        "AVOID vague and / or generic claims which may seem correct but are not substantiated by the context.",
                                    ],
                                ),
                                examples: [],
                            },
                        ],
                        strategy: None,
                        dedup: None,
                        discard_when_merged: true,
                    },
                ),
                tool_choice: None,
                model: PartialModelConfig {
                    id: Id(
                        PartialModelIdConfig {
                            provider: None,
                            name: None,
                        },
                    ),
                    parameters: PartialParametersConfig {
                        max_tokens: None,
                        reasoning: None,
                        temperature: None,
                        top_p: None,
                        top_k: None,
                        stop_words: None,
                        other: None,
                    },
                },
                request: PartialRequestConfig {
                    max_retries: Some(
                        5,
                    ),
                    base_backoff_ms: Some(
                        1000,
                    ),
                    max_backoff_secs: Some(
                        60,
                    ),
                    stream_idle_timeout_secs: Some(
                        60,
                    ),
                    max_response_bytes: Some(
                        Bytes(
                            1048576,
                        ),
                    ),
                    cache: None,
                },
            },
            conversation: PartialConversationConfig {
                title: PartialTitleConfig {
                    generate: PartialGenerateConfig {
                        auto: Some(
                            true,
                        ),
                        model: None,
                    },
                    from_heading: Some(
                        true,
                    ),
                },
                tools: PartialToolsConfig {
                    defaults: PartialToolsDefaultsConfig {
                        enable: None,
                        run: None,
                        format: None,
                        result: None,
                        cancellation_response: Some(
                            "This tool request was intentionally rejected by the user. Please evaluate and either ask the user why it was rejected, or infer the reason by looking at the historical messages in the conversation.",
                        ),
                        style: PartialDisplayStyleConfig {
                            hidden: Some(
                                false,
                            ),
                            inline_results: None,
                            results_file_link: None,
                            parameters: None,
                            error: PartialErrorStyleConfig {
                                inline_results: None,
                                results_file_link: None,
                            },
                        },
                        access: None,
                    },
                    tools: {},
                },
                compaction: PartialCompactionConfig {
                    rules: Merged(
                        MergedVec {
                            value: [
                                PartialCompactionRuleConfig {
                                    keep_first: None,
                                    keep_last: None,
                                    reasoning: Some(
                                        PolicySpec {
                                            policy: Strip,
                                            over: None,
                                        },
                                    ),
                                    tool_calls: Some(
                                        PolicySpec {
                                            policy: Strip,
                                            over: None,
                                        },
                                    ),
                                    summary: None,
                                },
                            ],
                            strategy: None,
                            dedup: None,
                            discard_when_merged: true,
                        },
                    ),
                },
                attachments: Merged(
                    MergedVec {
                        value: [],
                        strategy: None,
                        dedup: Some(
                            true,
                        ),
                        discard_when_merged: true,
                    },
                ),
                labels: Map(
                    {},
                ),
                inquiry: PartialInquiryConfig {
                    assistant: PartialAssistantConfig {
                        name: None,
                        system_prompt: Some(
                            Merged(
                                PartialMergedString {
                                    value: Some(
                                        "You are a helpful assistant.",
                                    ),
                                    strategy: None,
                                    separator: None,
                                    discard_when_merged: Some(
                                        true,
                                    ),
                                    dedup: None,
                                },
                            ),
                        ),
                        system_prompt_sections: Vec(
                            [],
                        ),
                        instructions: Merged(
                            MergedVec {
                                value: [
                                    PartialInstructionsConfig {
                                        title: Some(
                                            "How to respond to the user",
                                        ),
                                        description: None,
                                        position: None,
                                        items: Some(
                                            [
                                                "Be concise",
                                                "Use simple sentences. But feel free to use technical jargon.",
                                                "Do NOT overexplain basic concepts. Assume the user is technically proficient.",
                                                "AVOID flattering, corporate-ish or marketing language. Maintain a neutral viewpoint.",
                                                "AVOID vague and / or generic claims which may seem correct but are not substantiated by the context.",
                                            ],
                                        ),
                                        examples: [],
                                    },
                                ],
                                strategy: None,
                                dedup: None,
                                discard_when_merged: true,
                            },
                        ),
                        tool_choice: None,
                        model: PartialModelConfig {
                            id: Id(
                                PartialModelIdConfig {
                                    provider: None,
                                    name: None,
                                },
                            ),
                            parameters: PartialParametersConfig {
                                max_tokens: None,
                                reasoning: None,
                                temperature: None,
                                top_p: None,
                                top_k: None,
                                stop_words: None,
                                other: None,
                            },
                        },
                        request: PartialRequestConfig {
                            max_retries: Some(
                                5,
                            ),
                            base_backoff_ms: Some(
                                1000,
                            ),
                            max_backoff_secs: Some(
                                60,
                            ),
                            stream_idle_timeout_secs: Some(
                                60,
                            ),
                            max_response_bytes: Some(
                                Bytes(
                                    1048576,
                                ),
                            ),
                            cache: None,
                        },
                    },
                },
                start_local: None,
                default_id: None,
            },
            style: PartialStyleConfig {
                code: PartialCodeConfig {
                    color: Some(
                        true,
                    ),
                    line_numbers: Some(
                        false,
                    ),
                    file_link: Some(
                        Osc8,
                    ),
                    copy_link: Some(
                        Off,
                    ),
                },
                inline_code: PartialInlineCodeConfig {
                    background: None,
                },
                markdown: PartialMarkdownConfig {
                    wrap_width: Some(
                        80,
                    ),
                    table_max_column_width: Some(
                        40,
                    ),
                    table_continuation_edge: Some(
                        true,
                    ),
                    theme: Some(
                        "gruvbox-dark",
                    ),
                    hr_style: None,
                },
                mcp_startup: PartialMcpStartupConfig {
                    show: Some(
                        true,
                    ),
                    delay_secs: Some(
                        4,
                    ),
                    interval_ms: Some(
                        100,
                    ),
                },
                reasoning: PartialReasoningConfig {
                    display: None,
                    summary_model: None,
                    background: Some(
                        Ansi256(
                            236,
                        ),
                    ),
                    extend_across_tool_calls: Some(
                        true,
                    ),
                },
                streaming: PartialStreamingConfig {
                    progress: PartialProgressConfig {
                        show: Some(
                            true,
                        ),
                        delay_secs: Some(
                            3,
                        ),
                        interval_ms: Some(
                            100,
                        ),
                    },
                },
                lock_wait: PartialLockWaitConfig {
                    show: Some(
                        true,
                    ),
                    delay_secs: Some(
                        1,
                    ),
                    interval_ms: Some(
                        100,
                    ),
                    timeout_secs: Some(
                        10,
                    ),
                },
                tool_call: PartialToolCallConfig {
                    show: Some(
                        true,
                    ),
                    progress: PartialProgressConfig {
                        show: Some(
                            true,
                        ),
                        delay_secs: Some(
                            3,
                        ),
                        interval_ms: Some(
                            100,
                        ),
                    },
                    preparing: PartialPreparingConfig {
                        show: Some(
                            true,
                        ),
                        delay_secs: Some(
                            3,
                        ),
                        interval_ms: Some(
                            100,
                        ),
                    },
                },
                typewriter: PartialTypewriterConfig {
                    text_delay: Some(
                        DelayDuration(
                            3ms,
                        ),
                    ),
                    code_delay: Some(
                        DelayDuration(
                            500µs,
                        ),
                    ),
                    max_latency: Some(
                        DelayDuration(
                            0ns,
                        ),
                    ),
                },
            },
            interrupt: PartialInterruptConfig {
                escalation_cooldown_secs: Some(
                    2,
                ),
                streaming: PartialStreamingInterruptConfig {
                    action: None,
                    compose_in_editor: None,
                },
                tool_call: PartialToolInterruptConfig {
                    action: None,
                    compose_in_editor: None,
                },
            },
            editor: PartialEditorConfig {
                cmd: None,
                envs: Some(
                    [
                        "JP_EDITOR",
                        "VISUAL",
                        "EDITOR",
                    ],
                ),
                inline: PartialInlineEditorConfig {
                    edit_mode: None,
                },
            },
            template: PartialTemplateConfig {
                values: {},
            },
            providers: PartialProviderConfig {
                llm: PartialLlmProviderConfig {
                    aliases: {},
                    anthropic: PartialAnthropicConfig {
                        api_key_env: Some(
                            "ANTHROPIC_API_KEY",
                        ),
                        base_url: Some(
                            "https://api.anthropic.com",
                        ),
                        chain_on_max_tokens: Some(
                            true,
                        ),
                        beta_headers: Some(
                            [],
                        ),
                    },
                    cerebras: PartialCerebrasConfig {
                        api_key_env: Some(
                            "CEREBRAS_API_KEY",
                        ),
                        base_url: Some(
                            "https://api.cerebras.ai",
                        ),
                    },
                    deepseek: PartialDeepseekConfig {
                        api_key_env: Some(
                            "DEEPSEEK_API_KEY",
                        ),
                        base_url: Some(
                            "https://api.deepseek.com",
                        ),
                    },
                    google: PartialGoogleConfig {
                        api_key_env: Some(
                            "GEMINI_API_KEY",
                        ),
                        base_url: Some(
                            "https://generativelanguage.googleapis.com/v1beta",
                        ),
                        service_tier: None,
                    },
                    llamacpp: PartialLlamacppConfig {
                        base_url: Some(
                            "http://127.0.0.1:8080",
                        ),
                    },
                    ollama: PartialOllamaConfig {
                        base_url: Some(
                            "http://localhost:11434",
                        ),
                    },
                    openai: PartialOpenaiConfig {
                        api_key_env: Some(
                            "OPENAI_API_KEY",
                        ),
                        base_url: Some(
                            "https://api.openai.com",
                        ),
                        base_url_env: Some(
                            "OPENAI_BASE_URL",
                        ),
                    },
                    openrouter: PartialOpenrouterConfig {
                        api_key_env: Some(
                            "OPENROUTER_API_KEY",
                        ),
                        app_name: Some(
                            "JP",
                        ),
                        app_referrer: None,
                        base_url: Some(
                            "https://openrouter.ai",
                        ),
                    },
                },
                mcp: {},
            },
            plugins: PartialPluginsConfig {
                auto_install: Some(
                    true,
                ),
                shutdown_timeout_secs: Some(
                    5,
                ),
                command: {},
            },
            user: PartialUserConfig {
                name: None,
            },
        },
    ),
)
